# ThinkDeeperProd

./: .gitignore  CONTRIBUTING  LICENSE  NOTICE  README.md  Railway.toml
backend/: README.md  tmp_debug_reload.py  tmp_main.py  tmp_run.py
backend/app/: __init__.py  config.py
backend/data/: answers.jsonl  progress.json  questions.json
backend/tests/: __init__.py  conftest.py  test_progress_repository.py  test_question_repository.py  test_question_service.py  test_routes.py
frontend/: README.md  package-lock.json  package.json  vitest.config.ts
frontend/__tests__/: HomePage.test.tsx  Timer.test.tsx
frontend/app/: layout.tsx  page.tsx  providers.tsx
frontend/components/: AnswerForm.tsx  AuthPanel.tsx  CookieBanner.tsx  DopamineDrivers.tsx  EvaluatingInsight.tsx  FloatingAction.tsx  PrimingCard.tsx  PrimingModal.tsx  QuestionCard.tsx  SiteFooter.tsx  StreakTree.tsx  SubmissionCelebration.tsx
frontend/lib/: api.ts  (+1 more)
web/backend/: pyproject.toml  spawn_test.py  tmp_stat_debug.py
web/backend/app/: config.py  main.py
web/backend/app/api/: __init__.py  deps.py  routes.py
web/backend/app/integrations/: supabase_client.py
web/backend/app/models/: answer.py  question.py  reflection.py
web/backend/app/repositories/: __init__.py  answer_repository.py  progress_repository.py  question_repository.py  user_repository.py
web/backend/app/services/: __init__.py  question_service.py  reflection_service.py
web/backend/tests/: conftest.py  test_answer_service.py  test_evaluation_service.py  test_question_service.py  test_reflection_service.py  test_routes.py
(+54 files in other folders)
